# sudocpp_cmake_series

./: .gitignore  README.md
Ep01-GettingStarted/: CMakeLists.txt
Ep02-ChangingOutputDirs/: CMakeLists.txt  main.cpp
Ep03-CreateUseLibs/: CMakeLists.txt  console.cpp  console.h  main.cpp
Ep04-3rdPartyLibs/: CMakeLists.txt  main.cpp
